# aliased-flags

./: README.md  pyproject.toml
allium/: __init__.py  alias.py  flag.py
examples/: int_flag.py
flags/: __init__.py  alias.py  flag.py
